application/brennoflavio/immich-kiosk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-kiosk
  namespace: immich-kiosk
spec:
  type: ClusterIP
  selector:
    app: immich-kiosk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
