application/brennoflavio/immich-kiosk/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-kiosk
  namespace: immich-kiosk
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-dns01
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - immich-kiosk.home.brennoflavio.com.br
      secretName: immich-kiosk-tls
  rules:
    - host: immich-kiosk.home.brennoflavio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-kiosk
                port:
                  number: 80
